--- a/css/style.css
+++ b/css/style.css
@@ -601,11 +601,217 @@ button:focus {
 }
 
 .footer-text-social {
-  color: var(--WHITE, #fff);
+  color: #fff;
   /* Body Medium */
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
+}
+
+.footer-form {
+ margin-left: auto;
+}
+.footer-form-text {
+  color:  #FFF;
+/* Body Medium */
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.02em;
+margin-bottom: 16px;
+
+}
+.form-subscribe {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 24px;
+}
+.form-subscribe-label {
+}
+
+
+.form-subscribe-input {
+
+width: 264px;
+height: 40px;
+border-radius: 4px;
+border: 1px solid  #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+padding: 8px 16px;
+
+color: #FFF;
+font-size: 12px;
+line-height: 2; /* 200% */
+letter-spacing: 0.04em;
+
+/* убирает линию вокруг input */
+
+outline: transparent;   
+background-color: transparent;
+
+
+}
+
+.form-subscribe-input::placeholder{
+
+  color: currentColor;
+}
+.form-subscribe-button {
+ display: flex; 
+justify-content: center; 
+    align-items: center; 
+    gap: 16px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 24px;
+    
+}
+.form-subscribe-ikon {
+
+  fill:#FFFFFF ;
+  margin-left: 16px;
+}
+
+
+/* Modal window */
+
+.backdrop {
+   position: fixed; 
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: ;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+.is-open {
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding:  24px 24px 24px;
+  padding-top: 72px;
+}
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
+.x-button {
+  #2E2F42
+}
+.modal-caption {
+  color: #2e2f42;
+  text-align: center;
+  width: 360px;
+
+  /* Body Medium */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.modal-form {
+  margin-bottom: 8px;
+
+
+}
+
+.modal-form {
+}
+.form {
+}
+.form-wrapper {
+}
+.label-form {
+  display: block;
+  margin-bottom: 4px;
+
+  color:  #8E8F99;
+/* Small Text */
+font-size: 12px;
+line-height: 1.17; /* 116.667% */
+letter-spacing: 0.04em;
+}
+.form-field {
+
+  position: relative;
+}
+.input-form {
+  width: 100%;
+  height: 40px;
+
+  padding-left: 38px;
+
+  border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+
+outline: transparent;
+ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.input-form:focus{
+ border-radius: 4px;
+border: 1px solid  #4D5AE5;
+
+}
+.form-ikon {
+  top: 50%;
+  left: 16px;
+
+  position: absolute;
+  fill: transparent;
+  stroke: currentColor;
+
+  transform: translateY(-50%);
+}
+
+.input-form:focus+.form-ikon{
+
+fill:#4D5AE5 ;
 }
