--- a/css/style.css
+++ b/css/style.css
@@ -654,6 +654,7 @@ button:focus {
   color: currentColor;
 }
 .form-subscribe-button {
+  min-width: 165px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -685,7 +686,8 @@ button:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   opacity: 0;
   visibility: hidden;
@@ -728,8 +730,10 @@ button:focus {
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+  cursor: pointer;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .x-button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -741,6 +745,7 @@ button:focus {
 }
 .modal-btn:hover {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-btn:focus .x-button {
@@ -749,6 +754,7 @@ button:focus {
 
 .modal-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-caption {
@@ -773,7 +779,10 @@ button:focus {
 .form {
 }
 .form-wrapper {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
+}
+.form-wrapper-comment {
+  margin-bottom: 16px;
 }
 .label-form {
   display: block;
@@ -797,6 +806,8 @@ button:focus {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
 
+  background-color: transparent;
+
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -810,10 +821,10 @@ button:focus {
   left: 16px;
 
   position: absolute;
-  fill: transparent;
-  stroke: currentColor;
+  fill: #2e2f42;
 
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-form:focus + .form-ikon {
@@ -829,6 +840,8 @@ button:focus {
   outline: transparent;
 
   color: rgba(46, 47, 66, 0.4);
+
+  background-color: transparent;
 
   /* Small Text */
   font-size: 12px;
